--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,4 @@
 
 NODE_ENV=production
 PORT=5000
-MONGO_URI=YOUR_DATABASE_URI
+MONGO_URI=mongodb+srv://eckzen:Bernardo0214@cluster0.jlk4t2s.mongodb.net/expensetracker?retryWrites=true&w=majority
